--- a/public/style/CSS/workSpace.css
+++ b/public/style/CSS/workSpace.css
@@ -8,7 +8,8 @@ body {
     height: calc(100vh - 100px);
     background: linear-gradient(135deg, #bebebe, #fefefe);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 #top_bar{
     background: linear-gradient(45deg, #262626, #000000);
@@ -57,4 +58,90 @@ body {
     color: black;
     width: 25%;
     text-align: center;
+}
+#files{
+    margin: 20px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 0px grey;
+    overflow: hidden;
+}
+.file{
+    background: #fff;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    height: fit-content;
+    width: calc(100vw - 400px);
+}
+.file .fileInfo{
+    margin: 10px;
+    font-size: 17px;
+    font-family: 'Arial';
+    color: black;
+    width: 25%;
+    text-align: center;
+}
+.file .fileActions{
+    margin: 0px;
+}
+.supprFile{
+    margin-right: 7px;
+    padding: 5px;
+    outline: none;
+    border: 1px solid rgb(154, 0, 0);
+    border-radius: 10px;
+    background: transparent;
+    font-size: 16px;
+    font-family: 'Arial';
+    color: rgb(154, 0, 0);
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+.supprFile:active{
+    transform: scale(0.9);
+}
+.downloadFile{
+    padding: 5px;
+    outline: none;
+    border: 1px solid #5754f3;
+    border-radius: 10px;
+    background: transparent;
+    font-size: 16px;
+    font-family: 'Arial';
+    color: #5754f3;
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+.downloadFile:active{
+    transform: scale(0.9);
+}
+#addFile{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    outline: none;
+    padding: 7px;
+    background: transparent;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    font-size: 30px;
+    font-weight: lighter;
+    color: #fff;
+    font-family: 'Arial';
+    transition: all 0.4s ease;
+}
+#addFile:active{
+    transform: translate(-50%) scale(0.9);
+}
+#NoFile{
+    font-size: 22px;
+    font-family: 'Arial';
+    color: #454545;
+    font-weight: bold;
+    width: calc(100vw - 400px);
+    background: #fff;
+    text-align: center;
+    padding: 20px;
 }
